unpackaged/main/default/objects/n2de__Simulated_distribution__c/n2de__Simulated_distribution__c.object-meta.xml
<CustomObject>
    <label>Simulated distribution</label>
    <nameField>
        <label>Simulation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Simulated distributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>