unpackaged/main/default/objects/n2de__Simulated_distribution__c/fields/n2de__Assignable_object_id__c.field-meta.xml
<CustomField>
    <fullName>n2de__Assignable_object_id__c</fullName>
    <description>Assignable Object Id</description>
    <label>Assignable Object Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>