unpackaged/main/default/objects/n2de__Simulated_distribution__c/fields/n2de__Assignable_object_type__c.field-meta.xml
<CustomField>
    <fullName>n2de__Assignable_object_type__c</fullName>
    <description>Assignable Object Type</description>
    <label>Assignable Object Type</label>
    <length>60</length>
    <type>Text</type>
</CustomField>