unpackaged/main/default/objects/n2de__Simulated_distribution__c/fields/n2de__Continue_after_assignment__c.field-meta.xml
<CustomField>
    <fullName>n2de__Continue_after_assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Simulate assignment to all distributors</label>
    <type>Checkbox</type>
</CustomField>