unpackaged/main/default/objects/n2de__Simulated_distribution__c/fields/n2de__Current_processing_state__c.field-meta.xml
<CustomField>
    <fullName>n2de__Current_processing_state__c</fullName>
    <label>Current processing state</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>