unpackaged/main/default/objects/n2de__Simulated_distribution__c/fields/n2de__Ignore_caps__c.field-meta.xml
<CustomField>
    <fullName>n2de__Ignore_caps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore caps</label>
    <type>Checkbox</type>
</CustomField>