unpackaged/main/default/objects/n2de__Simulated_distribution__c/fields/n2de__Include_inactive__c.field-meta.xml
<CustomField>
    <fullName>n2de__Include_inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Include inactive teams and distributors</description>
    <label>Include inactive teams and distributors</label>
    <type>Checkbox</type>
</CustomField>