unpackaged/main/default/objects/n2de__Simulated_distribution__c/fields/n2de__Is_source_overridden__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_source_overridden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is the source overridden?</label>
    <type>Checkbox</type>
</CustomField>