unpackaged/main/default/objects/n2de__Simulated_distribution__c/fields/n2de__Job_id__c.field-meta.xml
<CustomField>
    <fullName>n2de__Job_id__c</fullName>
    <description>Simulation queueable Id</description>
    <label>Job id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>