unpackaged/main/default/objects/n2de__Simulated_distribution__c/fields/n2de__Processed_team_ids__c.field-meta.xml
<CustomField>
    <fullName>n2de__Processed_team_ids__c</fullName>
    <label>Processed team ids</label>
    <length>4080</length>
    <type>LongTextArea</type>
</CustomField>