unpackaged/main/default/objects/n2de__Simulated_distribution__c/fields/n2de__Simulated_run_date_time__c.field-meta.xml
<CustomField>
    <fullName>n2de__Simulated_run_date_time__c</fullName>
    <label>Simulated run date time</label>
    <type>DateTime</type>
</CustomField>