unpackaged/main/default/objects/n2de__Simulated_distribution__c/fields/n2de__Source_queue__c.field-meta.xml
<CustomField>
    <fullName>n2de__Source_queue__c</fullName>
    <description>Source queue Id</description>
    <label>Source queue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>