unpackaged/main/default/objects/n2de__Simulated_distribution__c/fields/n2de__Source_status__c.field-meta.xml
<CustomField>
    <fullName>n2de__Source_status__c</fullName>
    <description>Source status</description>
    <label>Source status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>