unpackaged/main/default/objects/n2de__Simulated_distribution__c/fields/n2de__Source_status_field_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Source_status_field_name__c</fullName>
    <description>Source status field name</description>
    <label>Source status field name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>