unpackaged/main/default/objects/n2de__Simulated_distribution__c/fields/n2de__Source_user__c.field-meta.xml
<CustomField>
    <fullName>n2de__Source_user__c</fullName>
    <description>Source user Id</description>
    <label>Source user</label>
    <length>18</length>
    <type>Text</type>
</CustomField>