unpackaged/main/default/objects/n2de__Simulated_distribution__c/fields/n2de__Status__c.field-meta.xml
<CustomField>
    <fullName>n2de__Status__c</fullName>
    <externalId>true</externalId>
    <label>Simulation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>